--- a/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml
@@ -22,3 +22,41 @@ spec:
   valuesFrom:
     - kind: ConfigMap
       name: cilium-helm-values
+  values:
+    operator:
+      prometheus:
+        enabled: true
+        serviceMonitor:
+          enabled: true
+      dashboards:
+        enabled: true
+        annotations:
+          grafana_folder: Cilium
+    hubble:
+      metrics:
+        serviceMonitor:
+          enabled: true
+        dashboards:
+          enabled: true
+          annotations:
+            grafana_folder: Cilium
+      relay:
+        prometheus:
+          enabled: true
+          serviceMonitor:
+            enabled: true
+    prometheus:
+      enabled: true
+      serviceMonitor:
+        enabled: true
+    dashboards:
+      enabled: true
+      annotations:
+        grafana_folder: Cilium
+    envoy:
+      prometheus:
+        enabled: true
+        serviceMonitor:
+          enabled: true
+    gatewayAPI:
+      enabled: true
