--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -3,13 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: flux-operator
+  name: flux-instance
 spec:
   targetNamespace: flux-system
   interval: 30m
   retryInterval: 2m
   timeout: 5m
-  path: ./kubernetes/apps/flux-system/flux-operator/app
+  dependsOn:
+    - name: flux-operator
+      namespace: flux-system
+  path: ./kubernetes/apps/flux-system/flux-instance/app
   prune: false
   sourceRef:
     kind: GitRepository
