chore(rook-ceph): disable cephFS and cephObjectStore

--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -20,6 +20,8 @@ spec:
       repository: ghcr.io/rook/ceph
 
     csi:
+      enableCephfsDriver: false
+      enableCephfsSnapshotter: false
       enableLiveness: true
       serviceMonitor:
         enabled: true
