--- a/docker/dns/compose.yaml
+++ b/docker/dns/compose.yaml
@@ -11,6 +11,7 @@ services:
     environment:
       TZ: Europe/Sofia
       FTLCONF_dns_listeningMode: all
+      FTLCONF_dns_upstreams: 1.1.1.1;8.8.8.8;9.9.9.9
       WEBPASSWORD_FILE: pi_hole_admin_password
     secrets:
       - pi_hole_admin_password
