--- a/kubernetes/apps/networking/pihole-dns/app/kustomization.yaml
+++ b/kubernetes/apps/networking/pihole-dns/app/kustomization.yaml
@@ -2,10 +2,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: networking
-components:
-  - ../../components/common
 resources:
-  - ./cloudflare-dns/ks.yaml
-  - ./cloudflare-tunnel/ks.yaml
-  - ./pihole-dns/ks.yaml
+  - ./externalsecret.yaml
+  - ./helmrelease.yaml
+  - ./helmrepository.yaml
