--- a/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
@@ -30,7 +30,8 @@ spec:
             name: pihole-dns
             key: EXTERNAL_DNS_PIHOLE_PASSWORD
     extraArgs:
-      - --pihole-api-version=6
+      # TODO: enable once 0.17.0 is released
+      # - --pihole-api-version=6
       - --pihole-server=http://192.168.0.53
     triggerLoopOnEvent: true
     policy: sync
