chore(external-dns): add tplinkwifi domain

--- a/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
@@ -45,5 +45,6 @@ spec:
     registry: noop
     domainFilters:
       - nasenov.dev
+      - tplinkwifi.net
     serviceMonitor:
       enabled: true
