--- a/kubernetes/apps/kube-system/cilium/config/gateway.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/gateway.yaml
@@ -4,11 +4,16 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
   name: internal
+  annotations:
+    external-dns.alpha.kubernetes.io/target: &hostname internal.nasenov.dev
 spec:
   gatewayClassName: cilium
   addresses:
     - type: IPAddress
       value: 192.168.0.40
+  infrastructure:
+    annotations:
+      external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
     - name: http
       protocol: HTTP
@@ -35,7 +40,7 @@ kind: Gateway
 metadata:
   name: external
   annotations:
-    external-dns.alpha.kubernetes.io/target: external.nasenov.dev
+    external-dns.alpha.kubernetes.io/target: &hostname external.nasenov.dev
 spec:
   gatewayClassName: cilium
   addresses:
@@ -43,7 +48,7 @@ spec:
       value: 192.168.0.43
   infrastructure:
     annotations:
-      external-dns.alpha.kubernetes.io/hostname: external.nasenov.dev
+      external-dns.alpha.kubernetes.io/hostname: *hostname
   listeners:
     - name: http
       protocol: HTTP
