--- a/kubernetes/apps/kube-system/cilium/config/httproute.yaml
+++ b/kubernetes/apps/kube-system/cilium/config/httproute.yaml
@@ -4,9 +4,14 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: httpsredirect
+  annotations:
+    external-dns.alpha.kubernetes.io/controller: none
 spec:
   parentRefs:
     - name: internal
+      namespace: kube-system
+      sectionName: http
+    - name: external
       namespace: kube-system
       sectionName: http
   rules:
