--- a/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/pihole-dns/app/helmrelease.yaml
@@ -41,6 +41,7 @@ spec:
     policy: sync
     sources:
       - gateway-httproute
+      - service
       - crd
     registry: noop
     domainFilters:
