--- a/kubernetes/apps/networking/cloudflared/app/externalsecret.yaml
+++ b/kubernetes/apps/networking/cloudflared/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: cloudflare-tunnel
+  name: cloudflared
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
