--- a/kubernetes/apps/networking/cloudflared/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/cloudflared/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: cloudflare-tunnel
+  name: cloudflared
 spec:
   interval: 30m
   chartRef:
@@ -17,7 +17,7 @@ spec:
       retries: 3
   values:
     controllers:
-      cloudflare-tunnel:
+      cloudflared:
         replicas: 2
         strategy: RollingUpdate
         pod:
@@ -38,7 +38,7 @@ spec:
               TUNNEL_METRICS: 0.0.0.0:8080
             envFrom:
               - secretRef:
-                  name: cloudflare-tunnel
+                  name: cloudflared
             probes:
               liveness: &probes
                 enabled: true
@@ -66,13 +66,13 @@ spec:
 
     service:
       app:
-        controller: cloudflare-tunnel
+        controller: cloudflared
         ports:
           http:
             port: *port
 
     serviceMonitor:
       app:
-        serviceName: cloudflare-tunnel
+        serviceName: cloudflared
         endpoints:
           - port: http
