--- a/kubernetes/apps/networking/external-dns-cloudflare/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns-cloudflare/app/helmrelease.yaml
@@ -3,7 +3,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: pihole-dns
+  name: external-dns-cloudflare
 spec:
   interval: 30m
   chart:
@@ -12,7 +12,7 @@ spec:
       version: 1.16.1
       sourceRef:
         kind: HelmRepository
-        name: pihole-dns
+        name: external-dns-cloudflare
   install:
     remediation:
       retries: 3
@@ -20,32 +20,32 @@ spec:
     remediation:
       retries: 3
   values:
-    fullnameOverride: pihole-dns
-    image:
-      repository: registry.k8s.io/external-dns/external-dns
-      tag: v0.17.0@sha256:85eba2727b410c8f8093d641a4b1a29671878db94d525a70a4108d10ba8eef5f
+    fullnameOverride: external-dns-cloudflare
     provider:
-      name: pihole
+      name: cloudflare
     env:
-      - name: EXTERNAL_DNS_PIHOLE_PASSWORD
+      - name: CF_API_TOKEN
         valueFrom:
           secretKeyRef:
-            name: pihole-dns
-            key: EXTERNAL_DNS_PIHOLE_PASSWORD
+            name: external-dns-cloudflare
+            key: CF_API_TOKEN
+      - name: CF_ZONE_ID
+        valueFrom:
+          secretKeyRef:
+            name: external-dns-cloudflare
+            key: CF_ZONE_ID
     extraArgs:
-      - --pihole-api-version=6
-      - --pihole-server=http://192.168.0.53
-      - --crd-source-apiversion=externaldns.k8s.io/v1alpha1
-      - --crd-source-kind=DNSEndpoint
+      - --zone-id-filter=$(CF_ZONE_ID)
+      - --cloudflare-dns-records-per-page=1000
+      - --cloudflare-proxied
+      - --gateway-name=external
     triggerLoopOnEvent: true
     policy: sync
     sources:
       - gateway-httproute
-      - service
-      - crd
-    registry: noop
+    txtOwnerId: default
+    txtPrefix: k8s.
     domainFilters:
       - nasenov.dev
-      - tplinkwifi.net
     serviceMonitor:
       enabled: true
