--- a/kubernetes/apps/networking/external-dns-cloudflare/ks.yaml
+++ b/kubernetes/apps/networking/external-dns-cloudflare/ks.yaml
@@ -3,7 +3,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cloudflare-dns
+  name: external-dns-cloudflare
 spec:
   targetNamespace: networking
   interval: 30m
@@ -14,7 +14,7 @@ spec:
       namespace: monitoring
     - name: external-secrets-stores
       namespace: external-secrets
-  path: ./kubernetes/apps/networking/cloudflare-dns/app
+  path: ./kubernetes/apps/networking/external-dns-cloudflare/app
   prune: true
   sourceRef:
     kind: GitRepository
