--- a/kubernetes/apps/networking/external-dns-pihole/app/externalsecret.yaml
+++ b/kubernetes/apps/networking/external-dns-pihole/app/externalsecret.yaml
@@ -3,7 +3,7 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: pihole-dns
+  name: external-dns-pihole
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
