--- a/kubernetes/apps/networking/external-dns-pihole/app/helmrepository.yaml
+++ b/kubernetes/apps/networking/external-dns-pihole/app/helmrepository.yaml
@@ -3,7 +3,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: HelmRepository
 metadata:
-  name: cloudflare-dns
+  name: external-dns-pihole
 spec:
   interval: 30m
   url: https://kubernetes-sigs.github.io/external-dns
