--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -9,6 +9,7 @@ resources:
   - ./autobrr/ks.yaml
   - ./bazarr/ks.yaml
   - ./cross-seed/ks.yaml
+  - ./fusion/ks.yaml
   - ./glance/ks.yaml
   - ./home-assistant/ks.yaml
   - ./it-tools/ks.yaml
