--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -26,6 +26,10 @@ spec:
 
     cephClusterSpec:
       cephConfig:
+        global:
+          bdev_enable_discard: "true" # quote
+          osd_class_update_on_start: "false" # quote
+          device_failure_prediction_mode: local # requires mgr module
         mon:
           mon_cluster_log_file_level: "info"
           # TODO: replace mon_cluster_log_file_level with mon_cluster_log_level in next ceph release
@@ -35,6 +39,14 @@ spec:
         urlPrefix: /
         ssl: false
         prometheusEndpoint: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090
+      mgr:
+        modules:
+          - name: diskprediction_local
+            enabled: true
+          - name: insights
+            enabled: true
+          - name: rook
+            enabled: true
       network:
         provider: host
         connections:
@@ -66,7 +78,8 @@ spec:
             memory: 256Mi
       storage:
         useAllNodes: true
-        useAllDevices: true
+        useAllDevices: false
+        devicePathFilter: /dev/disk/by-id/nvme-KINGSTON_SKC3000S1024G_.*
         config:
           osdsPerDevice: "1"
       placement:
