--- a/kubernetes/apps/default/it-tools/app/helmrelease.yaml
+++ b/kubernetes/apps/default/it-tools/app/helmrelease.yaml
@@ -45,10 +45,9 @@ spec:
 
     service:
       app:
-        controller: it-tools
         ports:
           http:
-            port: &port 8080
+            port: 8080
 
     route:
       app:
@@ -58,10 +57,6 @@ spec:
           - name: internal
             namespace: kube-system
             sectionName: https
-        rules:
-          - backendRefs:
-              - identifier: app
-                port: *port
 
     persistence:
       tmpfs:
