chore(rook-ceph): disable CephNodeDiskspaceWarning prometheus alert

--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -23,6 +23,9 @@ spec:
     monitoring:
       enabled: true
       createPrometheusRules: true
+      prometheusRuleOverrides:
+        CephNodeDiskspaceWarning:
+          disabled: true
 
     cephClusterSpec:
       cephConfig:
