chore(smartctl-exporter): override SmartCTLDDeviceTemperature alert

--- a/kubernetes/apps/monitoring/smartctl-exporter/app/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/smartctl-exporter/app/helmrelease.yaml
@@ -27,6 +27,12 @@ spec:
 
     prometheusRules:
       enabled: true
+      rules:
+        smartCTLDDeviceTemperature:
+          expr: smartctl_device_temperature{temperature_type="current"} > 65
+          annotations:
+            summary: Device has temperature higher than 65°C
+            description: Device {{ $labels.device }} on instance {{ $labels.instance }} has temperature higher than 65°C
 
     nodeSelector:
       # NVMe label
