chore(glance): add actual

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -11,6 +11,9 @@ pages:
             title: Media
             cache: 1m
             sites:
+              - title: Actual
+                url: https://actual.nasenov.dev
+                icon: di:actual-budget.svg
               - title: Fusion
                 url: https://feeds.nasenov.dev
                 icon: si:rss
