chore!: rename monitoring namespace to observability

--- a/kubernetes/apps/flux-system/flux-operator/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-operator/ks.yaml
@@ -11,7 +11,7 @@ spec:
   timeout: 5m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
   path: ./kubernetes/apps/flux-system/flux-operator/app
   prune: false
   sourceRef:
