--- a/kubernetes/apps/cert-manager/cert-manager/ks.yaml
+++ b/kubernetes/apps/cert-manager/cert-manager/ks.yaml
@@ -11,7 +11,7 @@ spec:
   timeout: 5m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
   path: ./kubernetes/apps/cert-manager/cert-manager/app
   prune: true
   sourceRef:
