--- a/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
+++ b/kubernetes/apps/database/crunchy-postgres-operator/ks.yaml
@@ -36,7 +36,7 @@ spec:
     - name: external-secrets-stores
       namespace: external-secrets
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
     - name: openebs
       namespace: openebs
   path: ./kubernetes/apps/database/crunchy-postgres-operator/cluster
