--- a/kubernetes/apps/external-secrets/external-secrets/ks.yaml
+++ b/kubernetes/apps/external-secrets/external-secrets/ks.yaml
@@ -11,7 +11,7 @@ spec:
   timeout: 5m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
     - name: cert-manager
       namespace: cert-manager
   path: ./kubernetes/apps/external-secrets/external-secrets/app
