--- a/kubernetes/apps/flux-system/flux-instance/ks.yaml
+++ b/kubernetes/apps/flux-system/flux-instance/ks.yaml
@@ -17,7 +17,7 @@ spec:
     - name: external-secrets-stores
       namespace: external-secrets
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
   path: ./kubernetes/apps/flux-system/flux-instance/app
   prune: false
   sourceRef:
