--- a/kubernetes/apps/networking/external-dns-pihole/ks.yaml
+++ b/kubernetes/apps/networking/external-dns-pihole/ks.yaml
@@ -11,7 +11,7 @@ spec:
   timeout: 5m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
     - name: external-secrets-stores
       namespace: external-secrets
   path: ./kubernetes/apps/networking/external-dns-pihole/app
