--- a/kubernetes/apps/observability/alloy/ks.yaml
+++ b/kubernetes/apps/observability/alloy/ks.yaml
@@ -3,18 +3,23 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: smartctl-exporter
+  name: &app alloy
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
+  components:
+    - ../../../../components/gatus/guarded
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
-  path: ./kubernetes/apps/monitoring/smartctl-exporter/app
+      namespace: observability
+  path: ./kubernetes/apps/observability/alloy/app
   prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  postBuild:
+    substitute:
+      APP: *app
