--- a/kubernetes/apps/observability/grafana/app/helmrelease.yaml
+++ b/kubernetes/apps/observability/grafana/app/helmrelease.yaml
@@ -64,13 +64,13 @@ spec:
             type: prometheus
             uid: prometheus
             access: proxy
-            url: http://kube-prometheus-stack-prometheus.monitoring.svc.cluster.local:9090/
+            url: http://kube-prometheus-stack-prometheus.observability.svc.cluster.local:9090/
             isDefault: true
           - name: Loki
             type: loki
             uid: loki
             access: proxy
-            url: http://loki-headless.monitoring.svc.cluster.local:3100
+            url: http://loki-headless.observability.svc.cluster.local:3100
             jsonData:
               maxLines: 1000
           - name: Postgres
