--- a/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
+++ b/kubernetes/apps/observability/kube-prometheus-stack/ks.yaml
@@ -5,7 +5,7 @@ kind: Kustomization
 metadata:
   name: &app kube-prometheus-stack
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
@@ -15,10 +15,10 @@ spec:
     - name: external-secrets-stores
       namespace: external-secrets
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
     - name: openebs
       namespace: openebs
-  path: ./kubernetes/apps/monitoring/kube-prometheus-stack/app
+  path: ./kubernetes/apps/observability/kube-prometheus-stack/app
   prune: true
   sourceRef:
     kind: GitRepository
