--- a/kubernetes/apps/observability/kube-state-metrics/ks.yaml
+++ b/kubernetes/apps/observability/kube-state-metrics/ks.yaml
@@ -3,18 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: gatus
+  name: kube-state-metrics
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   dependsOn:
-    - name: rook-ceph-cluster
-      namespace: rook-ceph
     - name: prometheus-operator-crds
-      namespace: monitoring
-  path: ./kubernetes/apps/monitoring/gatus/app
+      namespace: observability
+  path: ./kubernetes/apps/observability/kube-state-metrics/app
   prune: true
   sourceRef:
     kind: GitRepository
