--- a/kubernetes/apps/observability/loki/ks.yaml
+++ b/kubernetes/apps/observability/loki/ks.yaml
@@ -3,16 +3,18 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: prometheus-operator-crds
+  name: loki
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
-  path: ./kubernetes/apps/monitoring/prometheus-operator-crds/app
-  prune: false
+  dependsOn:
+    - name: openebs
+      namespace: openebs
+  path: ./kubernetes/apps/observability/loki/app
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  wait: true
