--- a/kubernetes/apps/observability/node-exporter/ks.yaml
+++ b/kubernetes/apps/observability/node-exporter/ks.yaml
@@ -3,16 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: kube-state-metrics
+  name: node-exporter
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   dependsOn:
     - name: prometheus-operator-crds
-      namespace: monitoring
-  path: ./kubernetes/apps/monitoring/kube-state-metrics/app
+      namespace: observability
+  path: ./kubernetes/apps/observability/node-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
