--- a/kubernetes/apps/observability/prometheus-operator-crds/ks.yaml
+++ b/kubernetes/apps/observability/prometheus-operator-crds/ks.yaml
@@ -3,21 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app kromgo
+  name: prometheus-operator-crds
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
-  components:
-    - ../../../../components/gatus/external
-  path: ./kubernetes/apps/monitoring/kromgo/app
-  prune: true
+  path: ./kubernetes/apps/observability/prometheus-operator-crds/app
+  prune: false
   sourceRef:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
-  postBuild:
-    substitute:
-      APP: *app
-      GATUS_PATH: /talos_version
+  wait: true
