--- a/kubernetes/apps/observability/smartctl-exporter/ks.yaml
+++ b/kubernetes/apps/observability/smartctl-exporter/ks.yaml
@@ -3,16 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: loki
+  name: smartctl-exporter
 spec:
-  targetNamespace: monitoring
+  targetNamespace: observability
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   dependsOn:
-    - name: openebs
-      namespace: openebs
-  path: ./kubernetes/apps/monitoring/loki/app
+    - name: prometheus-operator-crds
+      namespace: observability
+  path: ./kubernetes/apps/observability/smartctl-exporter/app
   prune: true
   sourceRef:
     kind: GitRepository
