--- a/kubernetes/apps/storage/volsync/ks.yaml
+++ b/kubernetes/apps/storage/volsync/ks.yaml
@@ -13,7 +13,7 @@ spec:
     - name: snapshot-controller
       namespace: storage
     - name: prometheus-operator-crds
-      namespace: monitoring
+      namespace: observability
   path: ./kubernetes/apps/storage/volsync/app
   prune: true
   sourceRef:
