--- a/kubernetes/components/common/alerts/alertmanager/provider.yaml
+++ b/kubernetes/components/common/alerts/alertmanager/provider.yaml
@@ -6,4 +6,4 @@ metadata:
   name: alertmanager
 spec:
   type: alertmanager
-  address: http://kube-prometheus-stack-alertmanager.monitoring.svc.cluster.local:9093/api/v2/alerts/
+  address: http://kube-prometheus-stack-alertmanager.observability.svc.cluster.local:9093/api/v2/alerts/
