chore: move volsync to volsync-system namespace

--- a/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/ks.yaml
@@ -38,7 +38,7 @@ spec:
     - name: rook-ceph
       namespace: rook-ceph
     - name: snapshot-controller
-      namespace: storage
+      namespace: kube-system
   path: ./kubernetes/apps/rook-ceph/rook-ceph/cluster
   prune: false
   sourceRef:
