fix: ks dependsOn volsync namespace

--- a/kubernetes/apps/default/actual/ks.yaml
+++ b/kubernetes/apps/default/actual/ks.yaml
@@ -14,7 +14,7 @@ spec:
     - ../../../../components/gatus/guarded
   dependsOn:
     - name: volsync
-      namespace: storage
+      namespace: volsync-system
     - name: rook-ceph-cluster
       namespace: rook-ceph
   path: ./kubernetes/apps/default/actual/app
