chore: add timetagger in glance

--- a/kubernetes/apps/default/glance/app/resources/glance.yml
+++ b/kubernetes/apps/default/glance/app/resources/glance.yml
@@ -11,6 +11,9 @@ pages:
             title: Media
             cache: 1m
             sites:
+              - title: TimeTagger
+                url: https://timetagger.nasenov.dev
+                icon: di:timetagger.svg
               - title: Actual
                 url: https://actual.nasenov.dev
                 icon: di:actual-budget.svg
