--- a/kubernetes/apps/default/audiobookshelf/app/helmrelease.yaml
+++ b/kubernetes/apps/default/audiobookshelf/app/helmrelease.yaml
@@ -81,7 +81,7 @@ spec:
         existingClaim: audiobookshelf
       media:
         type: nfs
-        server: 192.168.0.15
+        server: truenas.nasenov.dev
         path: /mnt/tank/media
         globalMounts:
           - path: /data
