--- a/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
+++ b/kubernetes/apps/default/cross-seed/app/helmrelease.yaml
@@ -80,7 +80,7 @@ spec:
       media:
         enabled: true
         type: nfs
-        server: 192.168.0.15
+        server: truenas.nasenov.dev
         path: /mnt/tank/media
         globalMounts:
           - path: /data/downloads
