--- a/kubernetes/apps/default/qbtools/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbtools/app/helmrelease.yaml
@@ -126,7 +126,7 @@ spec:
       media:
         enabled: true
         type: nfs
-        server: 192.168.0.15
+        server: truenas.nasenov.dev
         path: /mnt/tank/media
         advancedMounts:
           orphaned:
