--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -10,6 +10,7 @@ resources:
   - ./audiobookshelf/ks.yaml
   - ./autobrr/ks.yaml
   - ./bazarr/ks.yaml
+  - ./calibre-web-automated/ks.yaml
   - ./cross-seed/ks.yaml
   - ./fusion/ks.yaml
   - ./glance/ks.yaml
