chore: disable qbtools reannounce

--- a/kubernetes/apps/default/qbtools/app/helmrelease.yaml
+++ b/kubernetes/apps/default/qbtools/app/helmrelease.yaml
@@ -110,6 +110,7 @@ spec:
               # - "--dry-run"
 
       reannounce:
+        enabled: false
         containers:
           app:
             <<: *container
