--- a/kubernetes/apps/default/tqm/ks.yaml
+++ b/kubernetes/apps/default/tqm/ks.yaml
@@ -3,18 +3,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: qbtools
+  name: tqm
 spec:
   targetNamespace: default
   interval: 30m
   retryInterval: 2m
   timeout: 5m
   dependsOn:
-    - name: external-secrets-stores
-      namespace: external-secrets
     - name: qbittorrent
       namespace: default
-  path: ./kubernetes/apps/default/qbtools/app
+  path: ./kubernetes/apps/default/tqm/app
   prune: true
   sourceRef:
     kind: GitRepository
