--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -63,9 +63,7 @@ spec:
             #   - clean
             #   - qb
             #   - --dry-run
-            command: sleep
-            args:
-              - "3600"
+            command: ["sleep", "3600"]
             resources:
               requests:
                 cpu: 10m
