chore: debug tqm

--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -59,11 +59,10 @@ spec:
             image:
               repository: ghcr.io/home-operations/tqm
               tag: 1.15.0@sha256:70545e1a52e5afc4a6474c5b492e127be7b776eb9cea7adea3c6399e67ae2287
-            # args:
-            #   - clean
-            #   - qb
-            #   - --dry-run
-            command: ["sleep", "3600"]
+            args:
+              - clean
+              - qb
+              - --dry-run
             resources:
               requests:
                 cpu: 10m
