chore: remove retag dry run

--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
             args:
               - retag
               - qb
-              - --dry-run
+              # - --dry-run
             resources:
               requests:
                 cpu: 10m
