chore: remove clean dry run

--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -60,7 +60,7 @@ spec:
             args:
               - clean
               - qb
-              - --dry-run
+              # - --dry-run
 
         pod:
           restartPolicy: Never
