--- a/kubernetes/apps/default/tqm/app/helmrelease.yaml
+++ b/kubernetes/apps/default/tqm/app/helmrelease.yaml
@@ -28,7 +28,7 @@ spec:
       tqm:
         type: cronjob
         cronjob: &cronJobSpec
-          schedule: 0/2 * * * *
+          schedule: 0 * * * *
           backoffLimit: 0
           concurrencyPolicy: Forbid
           successfulJobsHistory: 1
