--- a/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/intel-device-plugin/app/helmrelease.yaml
@@ -15,7 +15,8 @@ spec:
         name: intel
   install:
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
