--- a/kubernetes/apps/networking/external-dns-cloudflare/app/helmrelease.yaml
+++ b/kubernetes/apps/networking/external-dns-cloudflare/app/helmrelease.yaml
@@ -15,8 +15,9 @@ spec:
         name: external-dns-cloudflare
   install:
     remediation:
-      retries: 3
+      retries: -1
   upgrade:
+    cleanupOnFail: true
     remediation:
       retries: 3
   values:
