--- a/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/recyclarr/app/helmrelease.yaml
@@ -21,7 +21,7 @@ spec:
       recyclarr:
         type: cronjob
         cronjob:
-          schedule: 0 0 * * *
+          schedule: "@daily"
           backoffLimit: 0
           concurrencyPolicy: Forbid
           successfulJobsHistory: 1
